# sidereal

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  flake.nix  justfile  rust-toolchain.toml  telemetry.docker.toml  telemetry.example.toml  telemetry.toml
.cargo/: config.toml
benches/: conversion.rs  ingestion.rs  query.rs
crates/sidereal-build/: Cargo.toml
crates/sidereal-build/src/: config.rs  env.rs  error.rs  forge_auth.rs  lib.rs  main.rs  protocol.rs  queue.rs  types.rs
crates/sidereal-build/src/api/: mod.rs
crates/sidereal-build/src/artifact/: mod.rs  rootfs.rs  storage.rs
crates/sidereal-build/src/cache/: compression.rs  mod.rs
crates/sidereal-build/src/discovery/: mod.rs
crates/sidereal-build/src/project/: mod.rs
crates/sidereal-build/src/proxy/: mod.rs
crates/sidereal-build/src/sandbox/: bubblewrap.rs  compile.rs  fetch.rs  mod.rs
crates/sidereal-build/src/service/: mod.rs  worker.rs
crates/sidereal-build/src/source/: checkout.rs  mod.rs
crates/sidereal-build/src/vm/: compiler.rs  mod.rs
crates/sidereal-build/tests/: builder_vm_integration.rs
crates/sidereal-builder-runtime/: Cargo.toml
crates/sidereal-builder-runtime/src/: artifact.rs  build.rs  cache.rs  discovery.rs  filesystem.rs  git.rs  main.rs  network.rs  protocol.rs  proxy.rs  s3.rs  signals.rs  vsock.rs
crates/sidereal-cli/: Cargo.toml
crates/sidereal-cli/src/: main.rs
crates/sidereal-cli/src/commands/: deploy.rs  dev.rs  init.rs  mod.rs  push.rs  secrets.rs
crates/sidereal-control/: Cargo.toml  README.md
crates/sidereal-control/migrations/: 001_initial.sql
crates/sidereal-control/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  strategy.rs  types.rs
crates/sidereal-control/src/api/: callbacks.rs  deployments.rs  mod.rs
crates/sidereal-control/src/deployment/: manager.rs  mod.rs
crates/sidereal-control/src/provisioner/: firecracker.rs  mod.rs
crates/sidereal-control/src/scheduler/: client.rs  mod.rs
crates/sidereal-control/src/service/: mod.rs
crates/sidereal-control/src/store/: memory.rs  mod.rs  postgres.rs
crates/sidereal-core/: Cargo.toml
crates/sidereal-core/src/: lib.rs
crates/sidereal-core/src/registry/: local.rs  mod.rs
crates/sidereal-core/src/transport/: mod.rs  tcp.rs  unix.rs
crates/sidereal-firecracker/: Cargo.toml
crates/sidereal-firecracker/src/: config.rs  error.rs  lib.rs  protocol.rs  registration.rs  rootfs.rs  state_server.rs  vm.rs  vsock.rs
crates/sidereal-gateway/: Cargo.toml
crates/sidereal-gateway/src/: config.rs  error.rs  lib.rs  main.rs  proxy.rs  server.rs
crates/sidereal-gateway/src/backend/: circuit_breaker.rs  http.rs  load_balancer.rs  mod.rs  vsock.rs
crates/sidereal-gateway/src/middleware/: auth.rs  metrics.rs  mod.rs  rate_limit.rs  security.rs  trace.rs
crates/sidereal-gateway/src/resolver/: mod.rs  scheduler_resolver.rs  static_resolver.rs
crates/sidereal-gateway/tests/: vsock_integration.rs
crates/sidereal-macros/: Cargo.toml
crates/sidereal-macros/src/: function.rs  lib.rs  service.rs
crates/sidereal-proto/: Cargo.toml
crates/sidereal-proto/benches/: codec.rs
crates/sidereal-proto/src/: codec.rs  control.rs  envelope.rs  error.rs  function.rs  lib.rs  propagation.rs  scheduler.rs  state.rs  types.rs
crates/sidereal-proto/tests/: state_protocol.rs
crates/sidereal-runtime/: Cargo.toml
crates/sidereal-runtime/src/: filesystem.rs  main.rs  signals.rs
crates/sidereal-scheduler/: Cargo.toml
crates/sidereal-scheduler/src/: api.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  placement.rs  registry.rs  scaling.rs  store.rs
crates/sidereal-scheduler/tests/: integration_api.rs  integration_health.rs  integration_lifecycle.rs
crates/sidereal-scheduler/tests/common/: fixtures.rs  mod.rs
crates/sidereal-sdk/: Cargo.toml
crates/sidereal-sdk/src/: config.rs  context.rs  extractors.rs  lib.rs  prelude.rs  registration.rs  registry.rs  runtime.rs  server.rs  service_registry.rs  tracing_layer.rs  triggers.rs
crates/sidereal-secrets/: Cargo.toml
crates/sidereal-secrets/src/: config.rs  env.rs  error.rs  lib.rs  memory.rs  native.rs  provider.rs  traits.rs  types.rs
crates/sidereal-server/: Cargo.toml
crates/sidereal-server/migrations/: 001_initial_schema.sql
crates/sidereal-server/src/: config.rs  lib.rs  main.rs  services.rs
crates/sidereal-state/: Cargo.toml
crates/sidereal-state/src/: config.rs  error.rs  lib.rs  memory.rs  postgres.rs  provider.rs  traits.rs  types.rs  valkey.rs  vsock.rs
crates/sidereal-telemetry/: Cargo.toml  telemetry.example.toml
crates/sidereal-telemetry/benches/: conversion.rs  ingestion.rs  query.rs
crates/sidereal-telemetry/src/: config.rs  error.rs  lib.rs  main.rs  storage.rs  test_fixtures.rs
crates/sidereal-telemetry/src/buffer/: ingester.rs
crates/sidereal-telemetry/src/deployments/: api.rs  mod.rs  queries.rs
crates/sidereal-telemetry/src/errors/: aggregation.rs  detection.rs  fingerprint.rs  mod.rs  queries.rs
crates/sidereal-telemetry/src/ingest/: convert.rs  http.rs
crates/sidereal-telemetry/src/query/: api.rs  builders.rs  engine.rs
crates/sidereal-telemetry/src/query/udfs/: cbor.rs  normalise.rs
crates/sidereal-telemetry/src/redact/: actions.rs  config.rs  matchers.rs  patterns.rs
crates/sidereal-telemetry/src/schema/: mod.rs  traces.rs
crates/sidereal-telemetry/tests/: ingestion.rs  s3_integration.rs
docker/: otel-collector-config.yaml
docker/builder-rootfs/: Dockerfile  build-rootfs.sh
examples/hello-world/: Cargo.toml  sidereal.toml
nix/: builder-rootfs.nix  firecracker-kernel.nix  make-ext4-fs.nix  module.nix  runtime-rootfs.nix
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  storage.rs  test_fixtures.rs
src/buffer/: ingester.rs  mod.rs
src/deployments/: api.rs  mod.rs  queries.rs  types.rs
src/errors/: aggregation.rs  api.rs  detection.rs  fingerprint.rs  mod.rs  normalise.rs  queries.rs  types.rs
src/ingest/: convert.rs  grpc.rs  http.rs  mod.rs
src/query/: api.rs  (+3 more)
tests/: ingestion.rs  s3_integration.rs
(+14 files in other folders)
