[package]
name = "sidereal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/djvcom/sidereal"
rust-version = "1.75"
description = "Self-hosted observability backend with OTLP ingestion and DataFusion queries"

[[bin]]
name = "sidereal"
path = "src/main.rs"

[dependencies]
# Arrow ecosystem (DataFusion 51 requires arrow/parquet 57, object_store 0.12)
arrow = { version = "57.1", features = ["prettyprint"] }
parquet = { version = "57.1", features = ["async", "object_store", "zstd"] }
datafusion = "51"
object_store = { version = "0.12", features = [] }

# OTLP (official OpenTelemetry proto types + semantic conventions)
# opentelemetry-proto 0.31 requires tonic 0.14
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.31"
tonic = { version = "0.14", features = ["gzip"] }
prost = "0.14"

# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "decompression-gzip"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
base64 = "0.22"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
ulid = "1.1"
url = "2"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.9"
secrecy = "0.10.3"
unicode-normalization = "0.1.25"
glob = "0.3.3"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
futures = "0.3"
rstest = "0.26.1"
proptest = "1.8.0"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
toml = "0.8"
flate2 = "1.1.5"

[features]
default = []
s3 = ["object_store/aws"]
gcs = ["object_store/gcp"]
azure = ["object_store/azure"]

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "query"
harness = false

# =============================================================================
# Lint configuration
# =============================================================================

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_must_use = "deny"

[lints.clippy]
# Panic-prevention: library code should never panic
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "warn"
indexing_slicing = "warn"

# Pedantic: high code quality standards
pedantic = { level = "warn", priority = -1 }

# Selectively allow some pedantic lints that are too noisy
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"

# Nursery: useful experimental lints
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
significant_drop_tightening = "allow"
redundant_pub_crate = "allow"

# Error handling
result_large_err = "warn"
large_futures = "warn"
large_stack_frames = "warn"

# Correctness
as_conversions = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
float_cmp = "warn"

# Style consistency
default_trait_access = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
iter_not_returning_iterator = "warn"
macro_use_imports = "warn"
match_wildcard_for_single_variants = "warn"
redundant_else = "warn"
ref_option_ref = "warn"
str_to_string = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"
use_self = "warn"
