[package]
name = "sidereal-builder-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sidereal builder runtime for compilation VMs (guest binary)"

[[bin]]
name = "sidereal-builder-runtime"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt", "io-util", "sync", "macros", "signal", "time", "process", "fs"] }
tokio-vsock.workspace = true
nix = { workspace = true, features = ["mount", "fs", "signal"] }
libc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rkyv = { workspace = true }
thiserror.workspace = true

[lints]
workspace = true
