[package]
name = "sidereal-builder-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sidereal builder runtime for compilation VMs (guest binary)"

[[bin]]
name = "sidereal-builder-runtime"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["rt", "io-util", "sync", "macros", "signal", "time", "process", "fs", "net"] }
tokio-vsock.workspace = true
nix = { workspace = true, features = ["mount", "fs", "signal"] }
libc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rkyv = { workspace = true }
thiserror.workspace = true
serde_json.workspace = true
object_store = { version = "0.13.1", features = ["aws"] }
bytes = "1.11.0"
tar = "0.4.44"
zstd = "0.13.3"
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.9"
hex = "0.4.3"

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
