[package]
name = "sidereal-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Sidereal development workflow"

[[bin]]
name = "sidereal"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
axum.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
