[package]
name = "sidereal-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Sidereal development workflow"

[[bin]]
name = "sidereal"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
which.workspace = true
opentelemetry-configuration.workspace = true

# Internal crates
sidereal-firecracker.workspace = true
sidereal-secrets = { version = "0.1.0", path = "../sidereal-secrets", features = ["native", "config"] }
dirs = "6.0.0"
reqwest = { version = "0.13.1", features = ["json"] }

[lints]
workspace = true
