[package]
name = "sidereal-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP ingress gateway for Sidereal"

[dependencies]
# HTTP server
axum.workspace = true
tower.workspace = true
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

# Async runtime
tokio = { workspace = true, features = ["net", "signal", "sync", "time"] }
tokio-util.workspace = true

# Serialisation
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Configuration
figment.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Tracing
tracing.workspace = true
opentelemetry-configuration.workspace = true

# Async traits
async-trait.workspace = true

# Concurrent data structures
dashmap = "6"

# Rate limiting
tower_governor = "0.8"

# Regex for function name validation
regex = "1"

# UUID generation
uuid.workspace = true

# Firecracker integration (optional)
sidereal-firecracker = { workspace = true, optional = true }
governor = "0.10.4"

[features]
default = []
firecracker = ["dep:sidereal-firecracker"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
