[package]
name = "sidereal-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP ingress gateway for Sidereal"

[[bin]]
name = "sidereal-gateway"
path = "src/main.rs"

[dependencies]
# HTTP server
axum.workspace = true
tower.workspace = true
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

# Async runtime
tokio = { workspace = true, features = ["net", "signal", "sync", "time"] }
tokio-util.workspace = true

# Serialisation
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Configuration
figment.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Tracing
tracing.workspace = true
opentelemetry-configuration.workspace = true

# Async traits
async-trait.workspace = true

# Concurrent data structures
dashmap = "6"

# Rate limiting
tower_governor = "0.8"

# Regex for function name validation
regex = "1"

# UUID generation
uuid.workspace = true

# Firecracker integration (optional)
sidereal-firecracker = { workspace = true, optional = true }
governor = "0.10.4"

# TLS
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls-pemfile = "2.2.0"

# Authentication
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }

# Metrics
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
sidereal-proto = { version = "0.1.0", path = "../sidereal-proto", optional = true }
deadpool-redis.workspace = true

[features]
default = []
firecracker = ["dep:sidereal-firecracker", "dep:sidereal-proto"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
