[package]
name = "sidereal-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for Sidereal SDK"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
