[package]
name = "sidereal-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wire protocol types for Sidereal inter-component communication"

[dependencies]
# Zero-copy serialisation
rkyv = { version = "0.8", features = ["bytecheck"] }

# Correlation IDs
ulid = "1.1"

# Buffer utilities
bytes = "1"

# Error handling
thiserror.workspace = true

# OTEL integration (optional)
opentelemetry = { version = "0.27", optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
otel = ["dep:opentelemetry", "dep:tracing"]

# Benchmarks will be added later
# [[bench]]
# name = "codec"
# harness = false
