[package]
name = "sidereal-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDK for building Sidereal functions"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sidereal-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
