[package]
name = "sidereal-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDK for building Sidereal functions and services"

[dependencies]
sidereal-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
figment.workspace = true
inventory.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
