[package]
name = "sidereal-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDK for building Sidereal functions and services"

[dependencies]
sidereal-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
figment.workspace = true
inventory.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
opentelemetry-configuration.workspace = true
http.workspace = true
tower.workspace = true
tracing.workspace = true
sidereal-state = { version = "0.1.0", path = "../sidereal-state", features = ["config"] }
